# python-boilerplate

./: .bumpversion.cfg  README.md  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: cli.rst  conf.py  index.rst  installation.rst
python_boilerplate/: __init__.py  cli.py  version.py
tests/: test_cli.py
